--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,15 @@ name = "wasm-game-of-life"
 version = "0.1.0"
 authors = ["Tomasz Waszczyk <tomasz@waszczyk.com>"]
 edition = "2021"
+description = "Game of Live"
+repository = ""
+license = "MIT"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
 
 [features]
-default = ["console_error_panic_hook"]
+default = ["console_error_panic_hook", "wee_alloc"]
 
 [dependencies]
 wasm-bindgen = "0.2.87"
@@ -32,3 +35,6 @@ wasm-bindgen-test = "0.3.37"
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
